--- a/rosdep/osx-homebrew.yaml
+++ b/rosdep/osx-homebrew.yaml
@@ -155,6 +155,10 @@ hdf5:
   osx:
     homebrew:
       packages: [hdf5]
+iproute2:
+  osx:
+    homebrew:
+      packages: [iproute2mac]
 jasper:
   osx:
     homebrew:
