Add python-numpy-stl-pip package

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1367,6 +1367,13 @@ python-numpy:
     vivid: [python-numpy]
     wily: [python-numpy]
     xenial: [python-numpy]
+python-numpy-stl-pip:
+  osx:
+    pip:
+      packages: [numpy-stl]
+  ubuntu:
+    pip:
+      packages: [numpy-stl]
 python-oauth2:
   arch: [python-oauth2]
   debian: [python-oauth2]
