--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2199,6 +2199,23 @@ repositories:
       url: https://github.com/tork-a/jsk_common_msgs-release.git
       version: 4.1.0-0
     status: developed
+  jsk_recognition:
+    release:
+      packages:
+      - checkerboard_detector
+      - imagesift
+      - jsk_pcl_ros
+      - jsk_pcl_ros_utils
+      - jsk_perception
+      - jsk_recognition
+      - jsk_recognition_msgs
+      - jsk_recognition_utils
+      - resized_image_transport
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/jsk_recognition-release.git
+      version: 1.1.0-2
+    status: developed
   jsk_roseus:
     release:
       packages:
