--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2227,6 +2227,24 @@ repositories:
       url: https://github.com/tork-a/jsk_roseus-release.git
       version: 1.6.0-0
     status: developed
+  jsk_visualization:
+    doc:
+      type: git
+      url: https://github.com/jsk-ros-pkg/jsk_visualization.git
+      version: master
+    release:
+      packages:
+      - jsk_interactive
+      - jsk_interactive_marker
+      - jsk_interactive_test
+      - jsk_rqt_plugins
+      - jsk_rviz_plugins
+      - jsk_visualization
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/jsk_visualization-release.git
+      version: 2.1.0-3
+    status: developed
   jskeus:
     release:
       tags:
