marvelmind_nav: 1.0.6-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -6016,6 +6016,12 @@ repositories:
       url: https://github.com/swri-robotics/marti_messages.git
       version: indigo-devel
     status: developed
+  marvelmind_nav:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/MarvelmindRobotics/marvelmind_nav-release.git
+      version: 1.0.6-0
   mastering_ros_demo_pkg:
     release:
       tags:
