--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2199,6 +2199,29 @@ repositories:
       url: https://github.com/tork-a/jsk_common_msgs-release.git
       version: 4.1.0-0
     status: developed
+  jsk_control:
+    doc:
+      type: git
+      url: https://github.com/jsk-ros-pkg/jsk_control.git
+      version: master
+    release:
+      packages:
+      - contact_states_observer
+      - eus_nlopt
+      - eus_qp
+      - eus_qpoases
+      - joy_mouse
+      - jsk_calibration
+      - jsk_control
+      - jsk_footstep_controller
+      - jsk_footstep_planner
+      - jsk_ik_server
+      - jsk_teleop_joy
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/jsk_control-release.git
+      version: 0.1.11-2
+    status: developed
   jsk_recognition:
     release:
       packages:
