Add debian and fedora rules for lcov
https://packages.debian.org/stretch/lcov
https://admin.fedoraproject.org/pkgdb/package/rpms/lcov/
http://packages.ubuntu.com/xenial/lcov

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1281,6 +1281,8 @@ language-pack-en:
   fedora: [filesystem]
   ubuntu: [language-pack-en]
 lcov:
+  debian: [lcov]
+  fedora: [lcov]
   ubuntu: [lcov]
 leveldb:
   debian: [libleveldb-dev]
