update wxwidgets, from xenial we need to use gtk3.0 (#13886)
* update wxwidgets, from xenial we need to use gtk3.0

* remove sid entry for wxwidgets

We don't generally do sid since it's a rolling release. And if we were to do sid it would be 3.0.

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4153,14 +4153,32 @@ wxpython:
     xenial: [python-wxgtk3.0]
 wxwidgets:
   arch: [wxgtk]
-  debian: [libwxgtk2.8-dev]
+  debian:
+    jessie: [libwxgtk3.0-dev]
+    stretch: [libwxgtk3.0-dev]
+    wheezy: [libwxgtk2.8-dev]
   fedora: [wxGTK-devel]
   freebsd: [wxgtk2]
   gentoo: [x11-libs/wxGTK]
   macports: [wxWidgets-python]
   opensuse: [wxGTK-devel]
   rhel: [wxGTK-devel]
-  ubuntu: [libwxgtk2.8-dev]
+  ubuntu:
+    lucid: [libwxgtk2.8-dev]
+    maverick: [libwxgtk2.8-dev]
+    natty: [libwxgtk2.8-dev]
+    oneiric: [libwxgtk2.8-dev]
+    precise: [libwxgtk2.8-dev]
+    quantal: [libwxgtk2.8-dev]
+    raring: [libwxgtk2.8-dev]
+    saucy: [libwxgtk2.8-dev]
+    trusty: [libwxgtk2.8-dev]
+    utopic: [libwxgtk2.8-dev]
+    vivid: [libwxgtk2.8-dev]
+    wily: [libwxgtk2.8-dev]
+    xenial: [libwxgtk3.0-dev]
+    yakkety: [libwxgtk3.0-dev]
+    zesty: [libwxgtk3.0-dev]
 x11proto-dri2-dev:
   arch: [dri2proto]
   debian: [x11proto-dri2-dev]
