[rosdeps] python-sphinx-argparse added (#13902)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2493,6 +2493,14 @@ python-sphinx:
     wily: [python-sphinx]
     xenial: [python-sphinx]
     xenial_python3: [python3-sphinx]
+python-sphinx-argparse:
+  ubuntu:
+    xenial: [python-sphinx-argparse]
+    xenial_python3: [python3-sphinx-argparse]
+    yakkety: [python-sphinx-argparse]
+    yakkety_python3: [python3-sphinx-argparse]
+    zesty: [python-sphinx-argparse]
+    zesty_python3: [python3-sphinx-argparse]
 python-sphinx-rtd-theme:
   ubuntu:
     xenial: [python-sphinx-rtd-theme]
