--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -173,6 +173,10 @@ python-argparse:
       packages: []
     xenial:
       packages: []
+    yakkety:
+      packages: []
+    zesty:
+      packages: []
 python-autobahn:
   debian: [python-autobahn]
   fedora:
@@ -368,6 +372,8 @@ python-catkin-pkg:
     wily_python3: [python3-catkin-pkg]
     xenial: [python-catkin-pkg]
     xenial_python3: [python3-catkin-pkg]
+    yakkety: [python-catkin-pkg]
+    zesty: [python-catkin-pkg]
 python-catkin-sphinx:
   fedora: [python-catkin-sphinx]
   osx:
@@ -683,6 +689,8 @@ python-empy:
     vivid: [python-empy]
     wily: [python-empy]
     xenial: [python-empy]
+    yakkety: [python-empy]
+    zesty: [python-empy]
 python-enum:
   fedora: [python-enum]
   ubuntu: [python-enum]
@@ -1204,6 +1212,8 @@ python-mock:
     wily_python3: [python3-mock]
     xenial: [python-mock]
     xenial_python3: [python3-mock]
+    yakkety: [python-mock]
+    zesty: [python-mock]
 python-msgpack:
   arch: [python2-msgpack]
   debian: [python-msgpack]
@@ -1342,6 +1352,8 @@ python-nose:
     wily_python3: [python3-nose]
     xenial: [python-nose]
     xenial_python3: [python3-nose]
+    yakkety: [python-nose]
+    zesty: [python-nose]
 python-numpy:
   arch: [python2-numpy]
   debian: [python-numpy]
