add python-argparse for debian stretch #13911

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -140,6 +140,7 @@ python-argparse:
     jessie: [libpython2.7-stdlib]
     sid: [libpython2.7-stdlib]
     squeeze: [python-argparse]
+    stretch: [libpython2.7-stdlib]
     wheezy: [python-argparse]
   fedora: [python]
   gentoo: [python]
