add catkin to lunar

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -12,5 +12,21 @@ release_platforms:
   - yakkety
   - zesty
 repositories:
+  catkin:
+    doc:
+      type: git
+      url: https://github.com/ros/catkin.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/catkin-release.git
+      version: 0.7.5-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/catkin.git
+      version: kinetic-devel
+    status: maintained
 type: distribution
 version: 2
