openhrp3: 3.1.9-0 in 'jade/distribution.yaml' [bloom]

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -3915,11 +3915,20 @@ repositories:
       version: master
     status: maintained
   openhrp3:
+    doc:
+      type: git
+      url: https://github.com/fkanehiro/openhrp3.git
+      version: master
     release:
       tags:
         release: release/jade/{package}/{version}
       url: https://github.com/tork-a/openhrp3-release.git
-      version: 3.1.8-0
+      version: 3.1.9-0
+    source:
+      type: git
+      url: https://github.com/fkanehiro/openhrp3.git
+      version: master
+    status: developed
   openni2_camera:
     doc:
       type: git
