openhrp3: 3.1.9-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3847,11 +3847,19 @@ repositories:
       version: master
     status: maintained
   openhrp3:
+    doc:
+      type: git
+      url: https://github.com/fkanehiro/openhrp3.git
+      version: master
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/tork-a/openhrp3-release.git
-      version: 3.1.8-4
+      version: 3.1.9-0
+    source:
+      type: git
+      url: https://github.com/fkanehiro/openhrp3.git
+      version: master
     status: developed
   openni2_camera:
     doc:
