jsk_planning: 0.1.8-2 in 'jade/distribution.yaml' [bloom]

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -2237,6 +2237,19 @@ repositories:
       url: https://github.com/tork-a/jsk_model_tools-release.git
       version: 0.2.5-0
     status: developed
+  jsk_planning:
+    release:
+      packages:
+      - jsk_planning
+      - pddl_msgs
+      - pddl_planner
+      - pddl_planner_viewer
+      - task_compiler
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/tork-a/jsk_planning-release.git
+      version: 0.1.8-2
+    status: developed
   jsk_pr2eus:
     release:
       packages:
