jsk_model_tools: 0.3.3-1 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2222,6 +2222,18 @@ repositories:
       url: https://github.com/tork-a/jsk_control-release.git
       version: 0.1.11-2
     status: developed
+  jsk_model_tools:
+    release:
+      packages:
+      - eus_assimp
+      - euscollada
+      - eusurdf
+      - jsk_model_tools
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/jsk_model_tools-release.git
+      version: 0.3.3-1
+    status: developed
   jsk_planning:
     release:
       packages:
