[rosdeps] python-enum34 for debian

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -696,6 +696,7 @@ python-enum:
   fedora: [python-enum]
   ubuntu: [python-enum]
 python-enum34:
+  debian: [python-enum34]
   fedora: [python-enum34]
   ubuntu: [python-enum34]
 python-enum34-pip:
