updated squirrel_common release (#13937)
* updated squirrel_common release

* list the packages in alphabetical order

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -13012,9 +13012,13 @@ repositories:
   squirrel_common:
     release:
       packages:
+      - robotino_description
       - robotino_msgs
+      - softhand_description
+      - squirrel_3d_localizer_msgs
       - squirrel_3d_mapping_msgs
       - squirrel_common
+      - squirrel_dynamic_filter_msgs
       - squirrel_hri_msgs
       - squirrel_kclhand_msgs
       - squirrel_localizer_msgs
@@ -13028,11 +13032,13 @@ repositories:
       - squirrel_rgbd_mapping_msgs
       - squirrel_sketch_interface_msgs
       - squirrel_speech_msgs
+      - squirrel_vad_msgs
+      - squirrel_view_controller_msgs
       - squirrel_waypoint_msgs
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/squirrel-project/squirrel_common-release.git
-      version: 0.0.18-0
+      version: 0.0.24-0
   sr_config:
     release:
       packages:
