py_trees: 0.5.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4378,6 +4378,21 @@ repositories:
       url: https://github.com/pr2/pr2_common.git
       version: kinetic-devel
     status: maintained
+  py_trees:
+    doc:
+      type: git
+      url: https://github.com/stonier/py_trees.git
+      version: release/0.5-kinetic
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/stonier/py_trees-release.git
+      version: 0.5.1-0
+    source:
+      type: git
+      url: https://github.com/stonier/py_trees.git
+      version: devel
+    status: developed
   pyros:
     doc:
       type: git
