add python-yaml for yakkety and zesty

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2994,6 +2994,10 @@ python-yaml:
     wily_python3: [python3-yaml]
     xenial: [python-yaml]
     xenial_python3: [python3-yaml]
+    yakkety: [python-yaml]
+    yakkety_python3: [python3-yaml]
+    zesty: [python-yaml]
+    zesty_python3: [python3-yaml]
 python-zmq:
   arch: [python2-pyzmq]
   debian: [python-zmq]
