--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -44,5 +44,20 @@ repositories:
       url: https://github.com/ros/genmsg.git
       version: indigo-devel
     status: maintained
+  genpy:
+    doc:
+      type: git
+      url: https://github.com/ros/genpy.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/genpy-release.git
+      version: 0.6.3-0
+    source:
+      type: git
+      url: https://github.com/ros/genpy.git
+      version: kinetic-devel
+    status: maintained
 type: distribution
 version: 2
