add boost and libconsole-bridge-dev for yakkety and zesty

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -378,6 +378,12 @@ boost:
     xenial:
       apt:
         packages: [libboost-all-dev]
+    yakkety:
+      apt:
+        packages: [libboost-all-dev]
+    zesty:
+      apt:
+        packages: [libboost-all-dev]
 box2d-dev:
   arch: [box2d]
   debian: [libbox2d-dev]
@@ -1441,6 +1447,8 @@ libconsole-bridge-dev:
     vivid: [libconsole-bridge-dev]
     wily: [libconsole-bridge-dev]
     xenial: [libconsole-bridge-dev]
+    yakkety: [libconsole-bridge-dev]
+    zesty: [libconsole-bridge-dev]
 libdbus-dev:
   arch: [dbus-core]
   debian: [libdbus-1-dev]
