add boost for stretch

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -325,6 +325,7 @@ boost:
     jessie: [libboost-all-dev]
     sid: [libboost-all-dev]
     squeeze: [libboost1.42-all-dev]
+    stretch: [libboost-all-dev]
     wheezy: [libboost-all-dev]
   fedora: [boost-devel]
   freebsd: [boost-python-libs]
