--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -59,5 +59,26 @@ repositories:
       url: https://github.com/ros/genmsg.git
       version: indigo-devel
     status: maintained
+  roscpp_core:
+    doc:
+      type: git
+      url: https://github.com/ros/roscpp_core.git
+      version: kinetic-devel
+    release:
+      packages:
+      - cpp_common
+      - roscpp_core
+      - roscpp_serialization
+      - roscpp_traits
+      - rostime
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/roscpp_core-release.git
+      version: 0.6.2-0
+    source:
+      type: git
+      url: https://github.com/ros/roscpp_core.git
+      version: kinetic-devel
+    status: maintained
 type: distribution
 version: 2
