--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -76,6 +76,7 @@ repositories:
       url: https://github.com/ros-gbp/roscpp_core-release.git
       version: 0.6.2-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros/roscpp_core.git
       version: kinetic-devel
