--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1160,6 +1160,12 @@ hostname:
   fedora: [hostname]
   gentoo: [dev-haskell/hostname]
   ubuntu: [hostname]
+htop:
+  arch: [htop]
+  debian: [htop]
+  fedora: [htop]
+  gentoo: [htop]
+  ubuntu: [htop]
 i2c-tools:
   debian: [i2c-tools]
   fedora: [i2c-tools]
