Updating move_base_to_manip version (since 2 branches were needed.) (#13960)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2983,7 +2983,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/UTNuclearRoboticsPublic/move_base_to_manip.git
-      version: master
+      version: kinetic
     release:
       tags:
         release: release/kinetic/{package}/{version}
@@ -2992,7 +2992,7 @@ repositories:
     source:
       type: git
       url: https://github.com/UTNuclearRoboticsPublic/move_base_to_manip.git
-      version: master
+      version: kinetic
     status: maintained
   moveit:
     doc:
