--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -6434,7 +6434,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/UTNuclearRoboticsPublic/move_base_to_manip.git
-      version: master
+      version: indigo
     release:
       tags:
         release: release/indigo/{package}/{version}
@@ -6443,7 +6443,7 @@ repositories:
     source:
       type: git
       url: https://github.com/UTNuclearRoboticsPublic/move_base_to_manip.git
-      version: master
+      version: indigo
     status: maintained
   moveit:
     doc:
