--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2235,6 +2235,18 @@ repositories:
       url: https://github.com/tork-a/jsk_planning-release.git
       version: 0.1.8-2
     status: developed
+  jsk_pr2eus:
+    release:
+      packages:
+      - jsk_pr2eus
+      - pr2eus
+      - pr2eus_moveit
+      - pr2eus_tutorials
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/jsk_pr2eus-release.git
+      version: 0.3.9-1
+    status: developed
   jsk_recognition:
     release:
       packages:
