Add rosdep keys for OpenVDB (#13950)
* Add keys for OpenVDB, a library for sparse volumetric data

* Alphabetize OpenVDB keys

* Add Yakkety and Zesty OpenVDB keys

* Switch "sid" to "stretch" for OpenVDB

* Add other Ubuntu releases

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2183,6 +2183,30 @@ libopenscenegraph:
     portage:
       packages: [dev-games/openscenegraph]
   ubuntu: [openscenegraph, libopenscenegraph-dev]
+libopenvdb:
+  arch: [openvdb]
+  debian:
+    jessie: [libopenvdb2.3]
+    stretch: [libopenvdb3.2]
+  gentoo:
+    portage:
+      packages: [media-gfx/openvdb]
+  ubuntu:
+    saucy: [libopenvdb1.1]
+    trusty: [libopenvdb2.1]
+    utopic: [libopenvdb2.3]
+    vivid: [libopenvdb2.3]
+    wily: [libopenvdb3.0]
+    xenial: [libopenvdb3.1]
+    yakkety: [libopenvdb3.1]
+    zesty: [libopenvdb3.2]
+libopenvdb-dev:
+  arch: [openvdb]
+  debian: [libopenvdb-dev]
+  gentoo:
+    portage:
+      packages: [media-gfx/openvdb]
+  ubuntu: [libopenvdb-dev]
 libosmesa6-dev:
   arch: [mesa]
   debian: [libosmesa6-dev]
