--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -12,6 +12,21 @@ release_platforms:
   - yakkety
   - zesty
 repositories:
+  angles:
+    doc:
+      type: git
+      url: https://github.com/ros/angles.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/geometry_angles_utils-release.git
+      version: 1.9.10-0
+    source:
+      type: git
+      url: https://github.com/ros/angles.git
+      version: master
+    status: maintained
   catkin:
     doc:
       type: git
