added coinor-libosi-dev to base.yaml (#13969)
* added coinor-libosi-dev to base.yaml

* add debian rule too

https://packages.debian.org/stretch/coinor-libosi-dev

* added fedora rule too

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -506,6 +506,10 @@ coinor-libipopt-dev:
   debian: [coinor-libipopt-dev]
   fedora: [coin-or-CoinUtils-devel]
   ubuntu: [coinor-libipopt-dev]
+coinor-libosi-dev:
+  debian: [coinor-libosi-dev]
+  fedora: [coin-or-Osi-devel]
+  ubuntu: [coinor-libosi-dev]
 collada-dom:
   arch: [collada-dom]
   debian: [libcollada-dom2.4-dp-dev]
