add python, python-coverage, python-rosdep for yakkety and zesty

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -108,6 +108,10 @@ python:
     wily_python3: [python3-dev]
     xenial: [python-dev]
     xenial_python3: [python3-dev]
+    yakkety: [python-dev]
+    yakkety_python3: [python3-dev]
+    zesty: [python-dev]
+    zesty_python3: [python3-dev]
 python-alembic:
   fedora: [python-alembic]
   ubuntu:
@@ -521,6 +525,8 @@ python-coverage:
     vivid: [python-coverage]
     wily: [python-coverage]
     xenial: [python-coverage]
+    yakkety: [python-coverage]
+    zesty: [python-coverage]
 python-cpplint:
   debian:
     pip:
@@ -2136,6 +2142,10 @@ python-rosdep:
     wily_python3: [python3-rosdep]
     xenial: [python-rosdep]
     xenial_python3: [python3-rosdep]
+    yakkety: [python-rosdep]
+    yakkety_python3: [python3-rosdep]
+    zesty: [python-rosdep]
+    zesty_python3: [python3-rosdep]
 python-rosdistro:
   debian: [python-rosdistro]
   fedora: [python-rosdistro]
