--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2223,6 +2223,10 @@ python-rospkg:
     wily_python3: [python3-rospkg]
     xenial: [python-rospkg]
     xenial_python3: [python3-rospkg]
+    yakkety: [python-rospkg]
+    yakkety_python3: [python3-rospkg]
+    zesty: [python-rospkg]
+    zesty_python3: [python3-rospkg]
 python-rrdtool:
   fedora: [rrdtool-python]
   ubuntu:
