add lz4, python-imaging, python-networkx, python-numpy, python-paramiko for yakkety and zesty

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3196,6 +3196,8 @@ lz4:
     vivid: [liblz4-dev]
     wily: [liblz4-dev]
     xenial: [liblz4-dev]
+    yakkety: [liblz4-dev]
+    zesty: [liblz4-dev]
 m4:
   arch: [m4]
   debian: [m4]
