--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1020,6 +1020,10 @@ python-imaging:
     wily_python3: [python3-imaging]
     xenial: [python-imaging]
     xenial_python3: [python3-imaging]
+    yakkety: [python-imaging]
+    yakkety_python3: [python3-imaging]
+    zesty: [python-imaging]
+    zesty_python3: [python3-imaging]
 python-impacket:
   debian: [python-impacket]
   fedora: [python-impacket]
@@ -1333,6 +1337,10 @@ python-networkx:
     wily_python3: [python3-networkx]
     xenial: [python-networkx]
     xenial_python3: [python3-networkx]
+    yakkety: [python-networkx]
+    yakkety_python3: [python3-networkx]
+    zesty: [python-networkx]
+    zesty_python3: [python3-networkx]
 python-nose:
   arch: [python2-nose]
   debian: [python-nose]
@@ -1387,6 +1395,8 @@ python-numpy:
     vivid: [python-numpy]
     wily: [python-numpy]
     xenial: [python-numpy]
+    yakkety: [python-numpy]
+    zesty: [python-numpy]
 python-numpy-stl-pip:
   osx:
     pip:
@@ -1493,6 +1503,8 @@ python-paramiko:
     vivid: [python-paramiko]
     wily: [python-paramiko]
     xenial: [python-paramiko]
+    yakkety: [python-paramiko]
+    zesty: [python-paramiko]
 python-passlib:
   fedora: [python-passlib]
   ubuntu: [python-passlib]
