add python-netifaces for yakkety and zesty

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1316,6 +1316,10 @@ python-netifaces:
     wily_python3: [python3-netifaces]
     xenial: [python-netifaces]
     xenial_python3: [python3-netifaces]
+    yakkety: [python-netifaces]
+    yakkety_python3: [python3-netifaces]
+    zesty: [python-netifaces]
+    zesty_python3: [python3-netifaces]
 python-networkmanager:
   ubuntu: [python-networkmanager]
 python-networkx:
