add log4cxx for stretch

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3147,6 +3147,7 @@ log4cxx:
     jessie: [liblog4cxx10-dev]
     sid: [liblog4cxx10-dev]
     squeeze: [liblog4cxx10-dev]
+    stretch: [liblog4cxx10-dev]
     wheezy: [liblog4cxx10-dev]
   fedora: [log4cxx-devel]
   freebsd: [log4cxx]
