--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -991,6 +991,7 @@ python-imaging:
     '23': [python-pillow, python-pillow-qt]
     '24': [python-pillow, python-pillow-qt]
     '25': [python-pillow, python-pillow-qt]
+    '26': [python-pillow, python-pillow-qt]
     beefy: [python-imaging]
     heisenbug: [python-pillow, python-pillow-qt]
     schrödinger’s: [python-pillow, python-pillow-qt]
