ros_comm: 1.13.0-0 in 'lunar/distribution.yaml' [bloom] (#13986)
* ros_comm: 1.13.0-0 in 'lunar/distribution.yaml' [bloom]

* add PR testing for ros_comm

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -209,6 +209,44 @@ repositories:
       url: https://github.com/ros/ros.git
       version: lunar-devel
     status: maintained
+  ros_comm:
+    doc:
+      type: git
+      url: https://github.com/ros/ros_comm.git
+      version: lunar-devel
+    release:
+      packages:
+      - message_filters
+      - ros_comm
+      - rosbag
+      - rosbag_storage
+      - rosconsole
+      - roscpp
+      - rosgraph
+      - roslaunch
+      - roslz4
+      - rosmaster
+      - rosmsg
+      - rosnode
+      - rosout
+      - rosparam
+      - rospy
+      - rosservice
+      - rostest
+      - rostopic
+      - roswtf
+      - topic_tools
+      - xmlrpcpp
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/ros_comm-release.git
+      version: 1.13.0-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/ros_comm.git
+      version: lunar-devel
+    status: maintained
   ros_comm_msgs:
     doc:
       type: git
