--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -27,6 +27,28 @@ repositories:
       url: https://github.com/ros/angles.git
       version: master
     status: maintained
+  bond_core:
+    doc:
+      type: git
+      url: https://github.com/ros/bond_core.git
+      version: master
+    release:
+      packages:
+      - bond
+      - bond_core
+      - bondcpp
+      - bondpy
+      - smclib
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/bond_core-release.git
+      version: 1.7.18-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/bond_core.git
+      version: master
+    status: maintained
   catkin:
     doc:
       type: git
