dynamic_reconfigure: 1.5.46-0 in 'lunar/distribution.yaml' [bloom] (#13993)
* dynamic_reconfigure: 1.5.46-0 in 'lunar/distribution.yaml' [bloom]

* Add PR testing for dynamic_reconfigure

* fix failed conflict resolution

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -123,6 +123,22 @@ repositories:
       url: https://github.com/ros/common_msgs.git
       version: jade-devel
     status: maintained
+  dynamic_reconfigure:
+    doc:
+      type: git
+      url: https://github.com/ros/dynamic_reconfigure.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/dynamic_reconfigure-release.git
+      version: 1.5.46-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/dynamic_reconfigure.git
+      version: master
+    status: maintained
   gencpp:
     doc:
       type: git
