--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -12,6 +12,22 @@ release_platforms:
   - yakkety
   - zesty
 repositories:
+  actionlib:
+    doc:
+      type: git
+      url: https://github.com/ros/actionlib.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/actionlib-release.git
+      version: 1.11.8-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/actionlib.git
+      version: indigo-devel
+    status: maintained
   angles:
     doc:
       type: git
