--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4408,6 +4408,21 @@ repositories:
       url: https://github.com/stonier/py_trees.git
       version: devel
     status: developed
+  py_trees_msgs:
+    doc:
+      type: git
+      url: https://github.com/stonier/py_trees_msgs.git
+      version: release/0.3-kinetic
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/stonier/py_trees_msgs-release.git
+      version: 0.3.0-0
+    source:
+      type: git
+      url: https://github.com/stonier/py_trees_msgs.git
+      version: git
+    status: developed
   pyros:
     doc:
       type: git
