--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4421,7 +4421,7 @@ repositories:
     source:
       type: git
       url: https://github.com/stonier/py_trees_msgs.git
-      version: git
+      version: devel
     status: developed
   pyros:
     doc:
