--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -139,6 +139,27 @@ repositories:
       url: https://github.com/ros/common_msgs.git
       version: jade-devel
     status: maintained
+  common_tutorials:
+    doc:
+      type: git
+      url: https://github.com/ros/common_tutorials.git
+      version: indigo-devel
+    release:
+      packages:
+      - actionlib_tutorials
+      - common_tutorials
+      - nodelet_tutorial_math
+      - pluginlib_tutorials
+      - turtle_actionlib
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/common_tutorials-release.git
+      version: 0.1.10-0
+    source:
+      type: git
+      url: https://github.com/ros/common_tutorials.git
+      version: indigo-devel
+    status: maintained
   dynamic_reconfigure:
     doc:
       type: git
