kobuki_desktop: 0.5.3-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2376,6 +2376,10 @@ repositories:
       version: kinetic
     status: maintained
   kobuki_desktop:
+    doc:
+      type: git
+      url: https://github.com/yujinrobot/kobuki_desktop.git
+      version: kinetic
     release:
       packages:
       - kobuki_dashboard
@@ -2387,7 +2391,7 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/yujinrobot-release/kobuki_desktop-release.git
-      version: 0.5.1-0
+      version: 0.5.3-0
     source:
       type: git
       url: https://github.com/yujinrobot/kobuki_desktop.git
