srv_tools: 0.0.2-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6098,6 +6098,24 @@ repositories:
       url: https://github.com/ros-planning/srdfdom.git
       version: kinetic-devel
     status: maintained
+  srv_tools:
+    release:
+      packages:
+      - bag_tools
+      - launch_tools
+      - plot_tools
+      - pointcloud_tools
+      - srv_tools
+      - tf_tools
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/srv/srv_tools-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/srv/srv_tools.git
+      version: kinetic
+    status: developed
   stage:
     doc:
       type: git
