volksbot_driver: Add kinetic src block, disable test_commits (#14013)

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14576,7 +14576,7 @@ repositories:
       url: https://github.com/uos/volksbot_driver.git
       version: indigo
     source:
-      test_pull_requests: true
+      test_commits: false
       type: git
       url: https://github.com/uos/volksbot_driver.git
       version: indigo
