--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -7141,7 +7141,7 @@ repositories:
       url: https://github.com/uos/volksbot_driver.git
       version: jade
     source:
-      test_pull_requests: true
+      test_commits: false
       type: git
       url: https://github.com/uos/volksbot_driver.git
       version: jade
