--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7210,6 +7210,11 @@ repositories:
       type: git
       url: https://github.com/uos/volksbot_driver.git
       version: kinetic
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/uos/volksbot_driver.git
+      version: kinetic
   vrpn:
     doc:
       type: git
