realsense camera status to maintained (#14017)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2619,7 +2619,7 @@ repositories:
       type: git
       url: https://github.com/IntelRealSense/librealsense.git
       version: master
-    status: developed
+    status: maintained
   linux_peripheral_interfaces:
     doc:
       type: git
@@ -4739,7 +4739,7 @@ repositories:
       type: git
       url: https://github.com/intel-ros/realsense.git
       version: indigo-devel
-    status: developed
+    status: maintained
   realtime_tools:
     doc:
       type: git
