--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -9752,7 +9752,7 @@ repositories:
       type: git
       url: https://github.com/intel-ros/realsense.git
       version: indigo-devel
-    status: developed
+    status: maintained
   realtime_tools:
     doc:
       type: git
