add python-qt5-bindings-gl for yakkety and zesty

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2053,6 +2053,8 @@ python-qt5-bindings-gl:
   ubuntu:
     wily: [python-pyqt5.qtopengl]
     xenial: [python-pyqt5.qtopengl]
+    yakkety: [python-pyqt5.qtopengl]
+    zesty: [python-pyqt5.qtopengl]
 python-qwt5-qt4:
   arch: [pyqwt]
   debian: [python-qwt5-qt4]
