add python-qt5-bindings-gl for stretch

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2047,6 +2047,7 @@ python-qt5-bindings-gl:
   arch: [python2-pyqt5]
   debian:
     jessie: [python-pyqt5.qtopengl]
+    stretch: [python-pyqt5.qtopengl]
   fedora: [python-qt5]
   gentoo: [dev-python/PyQt5]
   slackware: [PyQt5]
