add python-qt5-bindings for stretch

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2035,6 +2035,7 @@ python-qt5-bindings:
   arch: [python2-pyqt5]
   debian:
     jessie: [pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-sip-dev, qtbase5-dev]
+    stretch: [pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-sip-dev, qtbase5-dev]
   fedora: [python-qt5, sip]
   gentoo: [dev-python/PyQt5]
   slackware: [PyQt5]
