add python-pydot and python-pygraphviz for yakkety and zesty

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1717,6 +1717,8 @@ python-pydot:
     vivid: [python-pydot]
     wily: [python-pydot]
     xenial: [python-pydot]
+    yakkety: [python-pydot]
+    zesty: [python-pydot]
 python-pygame:
   arch: [python2-pygame]
   debian: [python-pygame]
@@ -1769,6 +1771,8 @@ python-pygraphviz:
     vivid: [python-pygraphviz]
     wily: [python-pygraphviz]
     xenial: [python-pygraphviz]
+    yakkety: [python-pygraphviz]
+    zesty: [python-pygraphviz]
 python-pyinotify:
   debian: [python-pyinotify]
   fedora: [python-inotify]
