std_capabilities: 0.1.0-0 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -589,6 +589,21 @@ repositories:
       url: https://github.com/ros-visualization/rqt.git
       version: kinetic-devel
     status: maintained
+  std_capabilities:
+    doc:
+      type: git
+      url: https://github.com/osrf/std_capabilities.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/std_capabilities-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/osrf/std_capabilities.git
+      version: master
+    status: maintained
   std_msgs:
     doc:
       type: git
