update rule for libtool (#14039)
* update rule for libtool

See:

- http://packages.ubuntu.com/yakkety/libtool
- http://packages.ubuntu.com/yakkety/libtool-bin
- http://packages.ubuntu.com/yakkety/libltdl-dev
- http://packages.ubuntu.com/zesty/libtool
- http://packages.ubuntu.com/zesty/libtool-bin
- http://packages.ubuntu.com/zesty/libltdl-dev

* add Debian stretch rule for libtool

See:

- https://packages.debian.org/stretch/libtool
- https://packages.debian.org/stretch/libtool-bin
- https://packages.debian.org/stretch/libltdl-dev

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2783,6 +2783,7 @@ libtool:
     lenny: [libtool, libltdl3-dev]
     sid: [libtool, libltdl-dev, libtool-bin]
     squeeze: [libtool, libltdl-dev]
+    stretch: [libtool, libltdl-dev, libtool-bin]
     wheezy: [libtool, libltdl-dev]
   fedora: [libtool, libtool-ltdl-devel]
   freebsd: [libtool]
@@ -2805,6 +2806,8 @@ libtool:
     vivid: [libtool, libltdl-dev, libtool-bin]
     wily: [libtool, libltdl-dev, libtool-bin]
     xenial: [libtool, libltdl-dev, libtool-bin]
+    yakkety: [libtool, libltdl-dev, libtool-bin]
+    zesty: [libtool, libltdl-dev, libtool-bin]
 libttspico:
   ubuntu: [libttspico-dev, libttspico-data, libttspico-utils, libttspico0]
 libturbojpeg:
