update rule for libjpeg (#14040)
* update rule for libjpeg

See:

- http://packages.ubuntu.com/yakkety/libjpeg-dev
- http://packages.ubuntu.com/zesty/libjpeg-dev

* update Debian stretch rule for libjpeg

See: https://packages.debian.org/stretch/libjpeg-dev

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1880,6 +1880,7 @@ libjpeg:
   arch: [libjpeg-turbo]
   debian:
     jessie: [libjpeg62-turbo-dev]
+    stretch: [libjpeg-dev]
     wheezy: [libjpeg8-dev]
   fedora: [libjpeg-turbo-devel]
   gentoo: [media-libs/libjpeg-turbo]
@@ -1901,6 +1902,8 @@ libjpeg:
     vivid: [libjpeg-dev]
     wily: [libjpeg-dev]
     xenial: [libjpeg-dev]
+    yakkety: [libjpeg-dev]
+    zesty: [libjpeg-dev]
 libjson-glib:
   arch: [json-glib]
   debian: [libjson-glib-dev]
