update rule for libfltk-dev (#14041)
* update rule for libfltk-dev

See:

- http://packages.ubuntu.com/yakkety/libfltk1.3-dev
- http://packages.ubuntu.com/zesty/libfltk1.3-dev

* use libfltk1.3-dev for Debian jessie and stretch

* typo

* only use 1.3 for Debian Stretch

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1580,7 +1580,11 @@ libflann-dev:
   ubuntu: [libflann-dev]
 libfltk-dev:
   arch: [fltk]
-  debian: [libfltk1.1-dev]
+  debian:
+    jessie: [libfltk1.1-dev]
+    sid: [libfltk1.1-dev]
+    stretch: [libfltk1.3-dev]
+    wheezy: [libfltk1.1-dev]
   fedora: [fltk-devel]
   freebsd: [fltk]
   gentoo: [=x11-libs/fltk-1*]
@@ -1601,6 +1605,8 @@ libfltk-dev:
     vivid: [libfltk1.3-dev]
     wily: [libfltk1.3-dev]
     xenial: [libfltk1.3-dev]
+    yakkety: [libfltk1.3-dev]
+    zesty: [libfltk1.3-dev]
 libfontconfig1-dev:
   fedora: [fontconfig-devel]
   ubuntu: [libfontconfig1-dev]
