--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4427,6 +4427,21 @@ repositories:
       url: https://github.com/stonier/py_trees_msgs.git
       version: devel
     status: developed
+  py_trees_ros:
+    doc:
+      type: git
+      url: https://github.com/stonier/py_trees_ros.git
+      version: release/0.5-kinetic
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/stonier/py_trees_ros-release.git
+      version: 0.5.0-0
+    source:
+      type: git
+      url: https://github.com/stonier/py_trees_ros.git
+      version: devel
+    status: developed
   pyros:
     doc:
       type: git
