adding qt5-svg (#14044)
* adding qt5 svg

* Update base.yaml

* typo fixed

* Update base.yaml

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2550,6 +2550,10 @@ libqt5-sql:
   fedora: [qt5-qtbase]
   gentoo: [dev-qt/qtsql]
   ubuntu: [libqt5sql5]
+libqt5-svg-dev:
+  debian: [libqt5svg5-dev]
+  fedora: [qt5-qtsvg-devel]
+  ubuntu: [libqt5svg5-dev]
 libqt5-widgets:
   arch:   [qt5-base]
   debian: [libqt5widgets5]
