--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -620,6 +620,16 @@ repositories:
       url: https://github.com/ros-visualization/rqt.git
       version: kinetic-devel
     status: maintained
+  stage:
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/stage-release.git
+      version: 4.1.1-0
+    source:
+      type: git
+      url: https://github.com/ros-gbp/stage-release.git
+      version: release/kinetic/stage
   std_capabilities:
     doc:
       type: git
