--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -689,6 +689,7 @@ eigen:
   debian:
     jessie: [libeigen3-dev]
     sid: [libeigen3-dev]
+    stretch: [libeigen3-dev]
     wheezy: [libeigen3-dev]
   fedora: [eigen3-devel]
   gentoo:
