depthcloud_encoder: 0.0.5-0 in 'kinetic/distribution.yaml' [bloom] (#14059)
* depthcloud_encoder: 0.0.5-0 in 'kinetic/distribution.yaml' [bloom]

* remove test_pull_requests arg from depthcloud_encoder

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -763,6 +763,21 @@ repositories:
       url: https://github.com/mdrwiega/depth_nav_tools.git
       version: kinetic-devel
     status: developed
+  depthcloud_encoder:
+    doc:
+      type: git
+      url: https://github.com/RobotWebTools/depthcloud_encoder.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/RobotWebTools-release/depthcloud_encoder-release.git
+      version: 0.0.5-0
+    source:
+      type: git
+      url: https://github.com/RobotWebTools/depthcloud_encoder.git
+      version: master
+    status: maintained
   depthimage_to_laserscan:
     doc:
       type: git
