interactive_marker_proxy: 0.1.2-0 in 'kinetic/distribution.yaml' [bloom] (#14060)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2051,6 +2051,21 @@ repositories:
       url: https://github.com/ros-industrial/industrial_core.git
       version: kinetic
     status: maintained
+  interactive_marker_proxy:
+    doc:
+      type: git
+      url: https://github.com/RobotWebTools/interactive_marker_proxy.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/RobotWebTools-release/interactive_marker_proxy-release.git
+      version: 0.1.2-0
+    source:
+      type: git
+      url: https://github.com/RobotWebTools/interactive_marker_proxy.git
+      version: master
+    status: maintained
   interactive_marker_twist_server:
     doc:
       type: git
