--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5883,6 +5883,21 @@ repositories:
       url: https://github.com/ethz-asl/rqt_multiplot_plugin.git
       version: master
     status: developed
+  rqt_py_trees:
+    doc:
+      type: git
+      url: https://github.com/stonier/rqt_py_trees.git
+      version: release/0.3-kinetic
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/stonier/rqt_py_trees-release.git
+      version: 0.3.0-0
+    source:
+      type: git
+      url: https://github.com/stonier/rqt_py_trees.git
+      version: devel
+    status: developed
   rqt_robot_plugins:
     doc:
       type: git
