--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -7205,8 +7205,8 @@ repositories:
     source:
       type: git
       url: https://github.com/skasperski/navigation_2d.git
-      version: indigo-dev
-    status: developed
+      version: indigo
+    status: maintained
   navigation_layers:
     doc:
       type: git
