--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8371,7 +8371,7 @@ repositories:
   phidgets_drivers:
     doc:
       type: git
-      url: https://github.com/ccny-ros-pkg/phidgets_drivers.git
+      url: https://github.com/ros-drivers/phidgets_drivers.git
       version: indigo
     release:
       packages:
@@ -8384,8 +8384,9 @@ repositories:
       url: https://github.com/ros-drivers-gbp/phidgets_drivers-release.git
       version: 0.2.3-1
     source:
+      test_pull_requests: true
       type: git
-      url: https://github.com/ccny-ros-pkg/phidgets_drivers.git
+      url: https://github.com/ros-drivers/phidgets_drivers.git
       version: indigo
     status: maintained
   phoxi_camera:
