navigation_2d: 0.3.1-0 in 'kinetic/distribution.yaml' [bloom] (#14081)
* navigation_2d: 0.3.1-0 in 'kinetic/distribution.yaml' [bloom]

* Added documentation.

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3518,6 +3518,31 @@ repositories:
       url: https://github.com/ros-planning/navigation.git
       version: kinetic-devel
     status: maintained
+  navigation_2d:
+    doc:
+      type: git
+      url: https://github.com/skasperski/navigation_2d.git
+      version: kinetic
+    release:
+      packages:
+      - nav2d
+      - nav2d_exploration
+      - nav2d_karto
+      - nav2d_localizer
+      - nav2d_msgs
+      - nav2d_navigator
+      - nav2d_operator
+      - nav2d_remote
+      - nav2d_tutorials
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/skasperski/navigation_2d-release.git
+      version: 0.3.1-0
+    source:
+      type: git
+      url: https://github.com/skasperski/navigation_2d.git
+      version: kinetic
+    status: maintained
   navigation_layers:
     doc:
       type: git
