ubiquity_motor: 0.5.1-0 in 'kinetic/distribution.yaml' [bloom] (#14086)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6913,11 +6913,19 @@ repositories:
       version: master
     status: maintained
   ubiquity_motor:
+    doc:
+      type: git
+      url: https://github.com/UbiquityRobotics/ubiquity_motor.git
+      version: 0.5.1
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/UbiquityRobotics-release/ubiquity_motor-release.git
-      version: 0.5.0-0
+      version: 0.5.1-0
+    source:
+      type: git
+      url: https://github.com/UbiquityRobotics/ubiquity_motor.git
+      version: indigo-devel
     status: developed
   ublox:
     doc:
