tork_rpc: 0.0.3-0 in 'indigo/distribution.yaml' [bloom] (#14087)

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -13642,6 +13642,25 @@ repositories:
       url: https://github.com/tu-darmstadt-ros-pkg-gbp/topic_proxy-release.git
       version: 0.1.1-0
     status: maintained
+  tork_rpc:
+    doc:
+      type: git
+      url: https://github.com/tork-a/tork_rpc.git
+      version: master
+    release:
+      packages:
+      - tork_rpc
+      - tork_rpc_util
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/tork-a/tork_rpc-release.git
+      version: 0.0.3-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/tork-a/tork_rpc.git
+      version: master
+    status: developed
   tornado:
     release:
       tags:
