add doc and source entries for metapackages in Indigo and Jade

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -6206,6 +6206,10 @@ repositories:
       version: master
     status: maintained
   metapackages:
+    doc:
+      type: git
+      url: https://github.com/ros/metapackages.git
+      version: indigo-devel
     release:
       packages:
       - desktop
@@ -6220,6 +6224,10 @@ repositories:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-gbp/metapackages-release.git
       version: 1.1.4-0
+    source:
+      type: git
+      url: https://github.com/ros/metapackages.git
+      version: indigo-devel
     status: maintained
   metaruby:
     release:
