Added python-redis for 14.10 -> 16.10 (#14113)
* Added python-redis for 14.10 -> 16.10

* Added zesty as well

* python-redis -> one entry for all Ubuntu versions

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2091,16 +2091,7 @@ python-readchar-pip:
 python-redis:
   debian: [python-redis]
   fedora: [python-redis]
-  ubuntu:
-    lucid: [python-redis]
-    maverick: [python-redis]
-    natty: [python-redis]
-    oneiric: [python-redis]
-    precise: [python-redis]
-    quantal: [python-redis]
-    raring: [python-redis]
-    saucy: [python-redis]
-    trusty: [python-redis]
+  ubuntu: [python-redis]
 python-redis-pip:
   ubuntu:
     pip:
