Added pocketsphinx to base.yaml (#14126)
* Added pocketsphinx to base.yaml

* Added more ubuntu distributions

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3355,6 +3355,20 @@ pkg-config:
     slackpkg:
       packages: [pkg-config]
   ubuntu: [pkg-config]
+pocketsphinx:
+  fedora: [pocketsphinx]
+  ubuntu:
+    precise: [libsphinxbase1]
+    quantal: [libsphinxbase1]
+    raring: [libsphinxbase1]
+    saucy: [libsphinxbase1]
+    trusty: [libsphinxbase1]
+    utopic: [libsphinxbase1]
+    vivid: [libsphinxbase1]
+    wily: [libsphinxbase1]
+    xenial: [pocketsphinx]
+    yakkety: [pocketsphinx]
+    zesty: [pocketsphinx]
 portaudio:
   arch: [portaudio]
   debian: [libportaudio-dev]
