jskeus: 1.1.0-0 in 'kinetic/distribution.yaml' [bloom] (#14124)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2328,11 +2328,15 @@ repositories:
       version: 2.1.1-0
     status: developed
   jskeus:
+    doc:
+      type: git
+      url: https://github.com/euslisp/jskeus.git
+      version: master
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/tork-a/jskeus-release.git
-      version: 1.0.14-0
+      version: 1.1.0-0
     status: developed
   katana_driver:
     doc:
