--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -711,6 +711,13 @@ repositories:
       url: https://github.com/AutonomyLab/create_autonomy.git
       version: indigo-devel
     status: developed
+  csm:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/csm-release.git
+      version: 1.0.2-0
+    status: developed
   cv_camera:
     doc:
       type: git
