Adding smartek_camera to documentation index for kinetic (#14136)
* Adding lpms_imu and timesync_ros to documentation index for distro kinetic

* Fix missing .git

* Adding smartek_camera to documentation index for kinetic.

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6179,6 +6179,16 @@ repositories:
       url: https://github.com/ros-gbp/slam_karto-release.git
       version: 0.7.3-0
     status: maintained
+  smartek_camera:
+    doc:
+      type: git
+      url: https://github.com/larics/smartek_camera.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/larics/smartek_camera.git
+      version: master
+    status: maintained
   sophus:
     release:
       tags:
