Adding libconfig-dev and libconfig++-dev (#14149)
* Adding libconfig-dev and libconfig++-dev

Adding:
* libconfig-dev
 * [debian](https://packages.debian.org/jessie/libconfig-dev)
 * [ubuntu](http://packages.ubuntu.com/xenial/libconfig-dev)
* libconfig++-dev
 * [debian](https://packages.debian.org/jessie/libconfig++-dev)
 * [ubuntu](http://packages.ubuntu.com/xenial/libconfig-dev)

* Update base.yaml

* add libconfig for fedora

https://admin.fedoraproject.org/pkgdb/package/rpms/libconfig/

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1340,6 +1340,13 @@ libcoin80-dev:
   debian: [libcoin80-dev]
   fedora: [Coin2-devel]
   ubuntu: [libcoin80-dev]
+libconfig++-dev:
+  debian: [libconfig++-dev]
+  ubuntu: [libconfig++-dev]
+libconfig-dev:
+  debian: [libconfig-dev]
+  fedora: [libconfig-devel]
+  ubuntu: [libconfig-dev]
 libconsole-bridge-dev:
   arch: [console-bridge]
   debian: [libconsole-bridge-dev]
