Re-releasing turtlebot_arm for kinetic with a new demo (#14158)
* Re-releasing turtlebot_arm for kinetic with a new demo

* Do not release; just src and doc

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6759,6 +6759,16 @@ repositories:
       url: https://github.com/turtlebot/turtlebot_apps.git
       version: indigo
     status: maintained
+  turtlebot_arm:
+    doc:
+      type: git
+      url: https://github.com/turtlebot/turtlebot_arm.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/turtlebot/turtlebot_arm.git
+      version: kinetic-devel
+    status: developed
   turtlebot_create:
     doc:
       type: git
