Add junit-xml rules (both distribution-wise and PIP)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1021,6 +1021,12 @@ python-jsonschema-pip:
   ubuntu:
     pip:
       packages: [jsonschema]
+python-junitxml:
+  ubuntu: [python-junitxml]
+python-junitxml-pip:
+  ubuntu:
+    pip:
+      packages: [junit-xml]
 python-kdtree:
   fedora: [libkdtree++-python]
   ubuntu:
