Add rosdep keys for ffmpeg, libvtk-qt-dev, libtiff-dev and protobuf (#14162)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -648,6 +648,7 @@ ffmpeg:
   debian:
     jessie: [libav-tools, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     sid: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
+    stretch: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     wheezy: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
   fedora: [ffmpeg-devel]
   gentoo: [media-video/ffmpeg]
@@ -667,6 +668,8 @@ ffmpeg:
     vivid: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     wily: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     xenial: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
+    yakkety: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
+    zesty: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
 ffmpeg2theora:
   arch: [ffmpeg2theora]
   debian: [ffmpeg2theora]
@@ -2626,6 +2629,7 @@ libtiff-dev:
   debian:
     jessie: [libtiff5-dev]
     sid: [libtiff5-dev]
+    stretch: [libtiff5-dev]
     wheezy: [libtiff5-alt-dev]
   fedora: [libtiff]
   gentoo:
@@ -2651,6 +2655,8 @@ libtiff-dev:
     vivid: [libtiff5-dev]
     wily: [libtiff5-dev]
     xenial: [libtiff5-dev]
+    yakkety: [libtiff5-dev]
+    zesty: [libtiff5-dev]
 libtiff4-dev:
   arch: [libtiff]
   debian: [libtiff4-dev]
@@ -2894,6 +2900,8 @@ libvtk-qt:
     vivid: [libvtk5-qt4-dev]
     wily: [libvtk5-qt4-dev]
     xenial: [libvtk6-qt-dev]
+    yakkety: [libvtk6-qt-dev]
+    zesty: [libvtk6-qt-dev]
 libwebp-dev:
   debian: [libwebp-dev]
   fedora: [libwebp-devel]
@@ -3426,6 +3434,7 @@ protobuf:
     jessie: [libprotobuf9]
     sid: [libprotobuf9]
     squeeze: [libprotobuf7]
+    stretch: [libprotobuf10]
     wheezy: [libprotobuf7]
   fedora: [protobuf]
   gentoo: [dev-libs/protobuf]
@@ -3440,6 +3449,8 @@ protobuf:
     vivid: [libprotobuf9]
     wily: [libprotobuf9v5]
     xenial: [libprotobuf9v5]
+    yakkety: [libprotobuf10]
+    zesty: [libprotobuf10]
 protobuf-dev:
   arch: [protobuf]
   debian: [libprotobuf-dev, protobuf-compiler, libprotoc-dev]
