add libyaml-cpp-dev rosdep to newer distros

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4247,6 +4247,7 @@ yaml-cpp:
       source:
         md5sum: f7fb81fd4a2fbd5022daa7686e816359
         uri: 'https://kforge.ros.org/rosrelease/viewvc/sourcedeps/yaml-cpp/yaml-cpp-0.2.5.rdmanifest'
+    stretch: [libyaml-cpp-dev]
     wheezy: [libyaml-cpp-dev]
   fedora: [yaml-cpp-devel]
   gentoo:
@@ -4271,6 +4272,8 @@ yaml-cpp:
     vivid: [libyaml-cpp-dev]
     wily: [libyaml-cpp-dev]
     xenial: [libyaml-cpp-dev]
+    yakkety: [libyaml-cpp-dev]
+    zesty: [libyaml-cpp-dev]
 yasm:
   arch: [yasm]
   debian: [yasm]
