Adding auction_methods_stack to documentation index for kinetic (#14186)
* Adding auction_methods_stack to documentation index for groovy

* Adding auction_methods_stack to documentation index for kinetic

* Adding auction_methods_stack to documentation index for kinetic

* Adding auction_methods_stack to documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -195,6 +195,11 @@ repositories:
       url: https://github.com/iirob/ati_force_torque.git
       version: kinetic-devel
     status: developed
+  auction_methods_stack:
+    doc:
+      type: git
+      url: https://github.com/joaoquintas/auction_methods_stack.git
+      version: master
   audio_common:
     doc:
       type: git
