[lunar] Add realtime_tools doc&source jobs

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -478,6 +478,16 @@ repositories:
       url: https://github.com/ros-visualization/qt_gui_core.git
       version: kinetic-devel
     status: maintained
+  realtime_tools:
+    doc:
+      type: git
+      url: https://github.com/ros-controls/realtime_tools.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ros-controls/realtime_tools.git
+      version: kinetic-devel
+    status: maintained
   ros:
     doc:
       type: git
