Add libsick_ldmrs + sick_ldmrs_laser

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -5727,6 +5727,15 @@ repositories:
       url: https://github.com/segwayrmp/libsegwayrmp-release.git
       version: 0.2.10-0
     status: maintained
+  libsick_ldmrs:
+    doc:
+      type: git
+      url: https://github.com/SICKAG/libsick_ldmrs.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/SICKAG/libsick_ldmrs.git
+      version: master
   libuvc:
     doc:
       type: git
@@ -12522,6 +12531,15 @@ repositories:
       url: https://github.com/wcaarls/shared_serial.git
       version: master
     status: maintained
+  sick_ldmrs_laser:
+    doc:
+      type: git
+      url: https://github.com/SICKAG/sick_ldmrs_laser.git
+      version: indigo
+    source:
+      type: git
+      url: https://github.com/SICKAG/sick_ldmrs_laser.git
+      version: indigo
   sick_tim:
     doc:
       type: git
