--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2683,6 +2683,15 @@ repositories:
       url: https://github.com/IntelRealSense/librealsense.git
       version: master
     status: maintained
+  libsick_ldmrs:
+    doc:
+      type: git
+      url: https://github.com/SICKAG/libsick_ldmrs.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/SICKAG/libsick_ldmrs.git
+      version: master
   linux_peripheral_interfaces:
     doc:
       type: git
@@ -6137,6 +6146,15 @@ repositories:
       url: https://github.com/wjwwood/serial.git
       version: master
     status: maintained
+  sick_ldmrs_laser:
+    doc:
+      type: git
+      url: https://github.com/SICKAG/sick_ldmrs_laser.git
+      version: jade
+    source:
+      type: git
+      url: https://github.com/SICKAG/sick_ldmrs_laser.git
+      version: jade
   sick_tim:
     doc:
       type: git
