--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -2537,6 +2537,15 @@ repositories:
       url: https://github.com/GT-RAIL/librms.git
       version: develop
     status: maintained
+  libsick_ldmrs:
+    doc:
+      type: git
+      url: https://github.com/SICKAG/libsick_ldmrs.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/SICKAG/libsick_ldmrs.git
+      version: master
   lms1xx:
     doc:
       type: git
@@ -6273,6 +6282,15 @@ repositories:
       url: https://github.com/ros-planning/shape_tools.git
       version: master
     status: maintained
+  sick_ldmrs_laser:
+    doc:
+      type: git
+      url: https://github.com/SICKAG/sick_ldmrs_laser.git
+      version: jade
+    source:
+      type: git
+      url: https://github.com/SICKAG/sick_ldmrs_laser.git
+      version: jade
   sick_tim:
     doc:
       type: git
