industrial_moveit: 0.1.0-0 in 'indigo/distribution.yaml' [bloom] (#14226)
* industrial_moveit: 0.1.0-0 in 'indigo/distribution.yaml' [bloom]

* removed the test_pull_request flag

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -4472,6 +4472,31 @@ repositories:
       url: https://github.com/ros-industrial/industrial_metapackages.git
       version: indigo
     status: developed
+  industrial_moveit:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/industrial_moveit.git
+      version: indigo
+    release:
+      packages:
+      - constrained_ik
+      - industrial_collision_detection
+      - industrial_moveit
+      - industrial_moveit_benchmarking
+      - stomp_core
+      - stomp_moveit
+      - stomp_plugins
+      - stomp_test_kr210_moveit_config
+      - stomp_test_support
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ros-industrial-release/industrial_moveit-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/ros-industrial/industrial_moveit.git
+      version: indigo
+    status: developed
   innok_heros_control:
     doc:
       type: git
